Disable automatically modifying tab padding while a tab is closing

Adds checks before modifying whether or not a tab uses extra padding to
ensure that padding doesn't get changed while the tab is closing.
Without these checks, tab titles would suddenly jump several pixels to
the left near the end of the tab's closing animation.

Found while reproducing/fixing
Bug: 859321

Change-Id: Id7db4b160530535af520cdfaf99202aa863a019a
Reviewed-on: https://chromium-review.googlesource.com/1162359
Commit-Queue: Ryan Meier <rameier@chromium.org>
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580652}
Former-commit-id: 3361a1016e0dffc8ffe7f76771588d7395118442